edit notes, header date, fix selection in table, add drag and drop notes, fix input notes field, edit style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -58,20 +58,25 @@
 
 
 
+  .custom-scrollbar::-webkit-scrollbar,
   .table-container::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 6px;
+    height: 6px;
   }
 
+  .custom-scrollbar::-webkit-scrollbar-track,
   .table-container::-webkit-scrollbar-track {
-    background: #171717;
+    background: transparent;
   }
 
+  .custom-scrollbar::-webkit-scrollbar-thumb,
   .table-container::-webkit-scrollbar-thumb {
     background: #404040;
-    border-radius: 4px;
+    border-radius: 3px;
+    border: 1px solid #171717;
   }
 
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover,
   .table-container::-webkit-scrollbar-thumb:hover {
     background: #525252;
   }
